--- a/20 - CSS Grid Image Gallery/image-gallery-START.html
+++ b/20 - CSS Grid Image Gallery/image-gallery-START.html
@@ -51,9 +51,78 @@
       border: 0;
     }
 
-    .gallery {}
+    .gallery {
+      display: grid;
+      grid-template-columns: repeat(auto-fit, 100px);
+      grid-auto-rows: 100px;
+      grid-auto-flow: dense;
+    }
 
+    .item {
+      overflow: hidden;
+      display: grid;
+      grid-template-columns: 1;
+      grid-template-rows: 1;
+    }
 
+    .item img {
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      /* without this, object-fit doesn't work */
+      width: 100%;
+      height: 100%;
+      object-fit: cover;
+    }
+
+    .item__overlay {
+      grid-column: 1 / -1;
+      grid-row: 1 / -1;
+      background: #bada;
+      position: relative;
+      display: grid;
+
+      /* center the button */
+      justify-items: center;
+      align-items: center;
+      transform: translateY(100%);
+      transition: 0.2s;
+    }
+
+    .item__overlay button {
+       background: none;
+       color: white;
+       padding: 5px;
+       text-transform: uppercase;
+       border: 2px solid white;
+    }
+
+    .item:hover .item__overlay {
+      transform: translateY(0%);
+    }
+
+    .item.v2 {
+      grid-column: span 2;
+    }
+
+    .item.v3 {
+      grid-column: span 3;
+    }
+
+    .item.v4 {
+      grid-column: span 4;
+    }
+
+    .item.h2 {
+      grid-row: span 2;
+    }
+    
+    .item.h3 {
+      grid-row: span 3;
+    }
+
+    .item.h4 {
+      grid-row: span 4;
+    }
 
     .overlay {
       position: fixed;
@@ -124,6 +193,11 @@
 
     overlayClose.addEventListener('click', close);
 
+    document.addEventListener('keyup', function(e) {
+      if (e.key === "Escape") {
+        close();
+      }
+    })
   </script>
 </body>
 
