--- a/21 - Flexbox vs CSS Grid/controls-on-right-START.html
+++ b/21 - Flexbox vs CSS Grid/controls-on-right-START.html
@@ -55,7 +55,20 @@
       background: white;
       padding: 10px;
       border-bottom: 1px solid rgba(0, 0, 0, 0.1);
+      display: grid;
+      grid-template-columns: 1fr;
+      grid-auto-flow: column;
     }
+    /* with flexbox */
+    /* .track {
+      display: flex;
+      justify-content: flex-end;
+    }
+    .track h2 {
+      flex: 1;
+    } */
+
+
   </style>
 </body>
 
