--- a/21 - Flexbox vs CSS Grid/perfectly-centered-START.html
+++ b/21 - Flexbox vs CSS Grid/perfectly-centered-START.html
@@ -20,6 +20,12 @@
     .hero {
       height: 200px;
       background: rgba(255, 255, 255, 0.2);
+      /* flexbox */
+      /* display: flex;
+      flex-direction: column;
+      align-items: center;
+      justify-content: center; */
+      display: grid;
     }
   </style>
 </body>
