--- a/11 - Spanning and Placing Cardio/get-sweaty-START.html
+++ b/11 - Spanning and Placing Cardio/get-sweaty-START.html
@@ -51,6 +51,7 @@
       grid-template-columns: repeat(5, 1fr 2fr);
       /* Make the grid have 10 explicit rows, 50px high each */
       grid-template-rows: repeat(10, 50px);
+      /* grid-auto-flow: dense; */
     }
 
     /* With Item 1, start at col 3 and go until 5 */
@@ -62,11 +63,13 @@
     .item2 {
       grid-column: 5 / -1;
     }
+
     /* Make Item 5 double span 2 cols and rows */
     .item5 {
-      grid-column: span 2;
-      grid-row: span 2;
+      grid-column: auto / span 2;
+      grid-row: auto / span 2;
     }
+
     /* Make Item 8 two rows high */
     .item8 {
       grid-row: span 2;
@@ -76,6 +79,7 @@
     .item15 {
       grid-column: 1 / -1;
     }
+
     /* Make item 18 span 4 widths, but end 9 */
     .item18 {
       grid-column: span 4 / 9;
