--- a/21 - Flexbox vs CSS Grid/axis-flipping-2019-12.html
+++ b/21 - Flexbox vs CSS Grid/axis-flipping-2019-12.html
@@ -35,7 +35,15 @@
   </div>
 
   <style>
-    /* flexbox just needs flex-direction: row vs column */
+    /* flexbox */
+    /*.flipper {
+      display: flex;
+      flex-direction: column;
+    }
+    .flipper.horizontal {
+      flex-direction: row;
+    }*/
+    /* CSS GRID */
     .flipper {
       display: grid;
       grid-template-columns: 1fr;
