--- a/21 - Flexbox vs CSS Grid/perfectly-centered-2019-12.html
+++ b/21 - Flexbox vs CSS Grid/perfectly-centered-2019-12.html
@@ -20,6 +20,13 @@
     .hero {
       height: 200px;
       background: rgba(255, 255, 255, 0.2);
+      display: grid;
+      grid-template-columns: 1 / 1;
+      grid-template-rows: 1 / 1;
+      justify-content: center;
+      align-content: center;
+      justify-items: center;
+      align-items: center;
     }
   </style>
 </body>
