--- a/21 - Flexbox vs CSS Grid/self-control-2019-12.html
+++ b/21 - Flexbox vs CSS Grid/self-control-2019-12.html
@@ -24,15 +24,32 @@
       height: 200px;
       width: 200px;
       border: 10px solid var(--yellow);
-
+      grid-template-columns: 1fr 1fr;
+      grid-template-rows: 1fr 1fr;
     }
 
 
-    .corner:nth-child(1),
-    .corner:nth-child(2) {}
+    /* .corner:nth-child(1),
+    .corner:nth-child(2) {
+      align-self: start;
+    }
 
     .corner:nth-child(1),
-    .corner:nth-child(3) {}
+    .corner:nth-child(3) {
+      justify-self: start;
+    }
+
+    .corner:nth-child(2),
+    .corner:nth-child(4) {
+      justify-self: end;
+    }
+
+    .corner:nth-child(3),
+    .corner:nth-child(4) {
+      align-self: end;
+    } */
+
+
   </style>
 </body>
 
