Add flexbox stacked layout

--- a/21 - Flexbox vs CSS Grid/self-control-2019-12.html
+++ b/21 - Flexbox vs CSS Grid/self-control-2019-12.html
@@ -28,8 +28,9 @@
       grid-template-rows: 1fr 1fr;
     }
 
+    /* you can only do this with CSS Grid */
 
-    /* .corner:nth-child(1),
+    .corner:nth-child(1),
     .corner:nth-child(2) {
       align-self: start;
     }
@@ -47,7 +48,7 @@
     .corner:nth-child(3),
     .corner:nth-child(4) {
       align-self: end;
-    } */
+    }
 
 
   </style>
