--- a/25 - Full Bleed Blog Layout/full-bleed-blog-START.html
+++ b/25 - Full Bleed Blog Layout/full-bleed-blog-START.html
@@ -154,6 +154,48 @@
       font-weight: 100;
       margin: 0;
     }
+
+    .post {
+      display: grid;
+      grid-template-columns: 3fr 15fr 5fr;
+      grid-gap: 10px 50px;
+    }
+
+    .post > * {
+      grid-column: 2;
+    }
+
+    .post > figure {
+      grid-column: 1 / -1;
+      margin: 0;
+      font-size: 10px;
+      text-align: center;
+    }
+
+    .post > blockquote {
+      font-size: 60px;
+      grid-column: 1 / -1;
+      font-style: italic;
+      text-align: center;
+    }
+
+    .tip {
+      background: #FAFAFA;
+      padding: 10px;
+      grid-row: span 5;
+    }
+
+    .tip-left {
+      grid-column: 1 / span 1;
+      border-left: 2px solid var(--yellow);
+      text-align: right;
+    }
+
+    .tip-right {
+      grid-column: 3 / span 1;
+      border-left: 2px solid var(--yellow);
+    }
+
   </style>
 
 </body>
